fix text alignment

--- a/price_scrapper_front/src/components/Profile/Profile.css
+++ b/price_scrapper_front/src/components/Profile/Profile.css
@@ -77,7 +77,7 @@ form ul li {
 #empty {
     z-index: -1;
     text-align: center;
-    left: 28%;
+    left: 29%;
     position: absolute;
 }
 
